[tool.poetry]
name = "chrono-chat"
version = "0.1.0"
description = "A unified bridge for various AI APIs with async support"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"  # 或者你的 Python 版本

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"